--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">QuickMudra</string>
+    <string name="app_name">Dopfin</string>
     <string name="verification_code_subtext">Please type the verification code sent to +xxxxxxxxxx</string>
     <string name="verification_code">Verification Code</string>
     <string name="validate">Validate</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="title_home">Home</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
